tests/ir/validation/expected/wrong_operator_types.txt
semantic error: недопустимая операция - оператор '%' требует целочисленный правый операнд
  --> tests/ir/validation/wrong_operator_types.src:4:13
4      int z = x % y;
               ^
   = получено: bool
   = подсказка: оператор % работает только с целыми числами (int)

